--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
         <title>Node</title>
     </head>
     <body>
-        <h1>I'm Home</h1>
-	<h2>hello</h2>
+        <h1>TTFB Demo</h1>
     </body>
 </html>
